feat: add splash

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@
   --slate: #333333;
   --gray: #E5E7EB;
   --red: #FAD1D1; /* pastel red */
-  --bg: #FFFFFF;
+  --bg: #fbfbfb;
 
   /* Folderly — Semantic */
   --color-primary: var(--blue);
